# MathWiz-Workshop

./: CLAUDE.md  README.md
backend/: cache.py  main.py  pyproject.toml
backend/routers/: collatz.py  cont_fraction.py  modular_web.py  prime_tree.py  recaman.py  totient.py  ulam_spiral.py
frontend/: api.js  index.html
frontend/views/: collatz.js  contFraction.js  modularWeb.js  primeTree.js  recaman.js  totient.js  ulamSpiral.js
plans/: collatz.md  collatz_graph.md  continued_fractions.md  fun_math.md  helpful_prompts.md  infra_plans.md  modular_arithmetic_webs.md  modular_web.md  prime_factorization_trees.md  prime_tree.md  recaman.md  recaman_sequence.md  syracuse_heatmap.md  totient.md  totient_graph.md  ulam_spiral.md
